--- a/main/templates/inc/before.html
+++ b/main/templates/inc/before.html
@@ -23,7 +23,7 @@
 <div id="header">
 	<table id="headertable">
 	<tr>
-	<td>Mikael Finstad - 1B</td>
+	<td>{{ user.first_name }} {{ user.last_name }} ({{ user.username }}) - 1B</td>
 	<!--IF NOT HOME--><td class="align_center">Gullmynter: 34</td><!--ENDIF-->
 	<td class="align_right"><a href="/logout">Avslutt spillet</a></td>
 	</tr>
