--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -1,4 +1,5 @@
-{% include "inc/before.html" %}
+{% extends "outer.html" %}
+{% block content %}
 <h1>Logg inn</h1>
 <form action="{% url django.contrib.auth.views.login %}" method="post">
 	{% csrf_token %}
@@ -15,4 +16,4 @@
 
 	<input type="submit" value="Logg inn" />
 </form>
-{% include "inc/after.html" %}
+{% endblock %}
