--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -3,7 +3,7 @@
 <div id="right_content">
 	<p class="chest_header">Skattekiste</p>
 	<img id="treasure_chest" src="/media/images/treasurechest.png" alt="skattekiste" />
-	<p>Du har <span class="gold_text">34</span> gullmynter</p>
+	<p class="gold_coins">Du har <span class="gold_text">34</span> gullmynter</p>
 </div>
 <div id="left_content">
 <h1>Velg ditt rom</h1>
