Call to views.room should now create a Turn object and associate it with session

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -8,10 +8,10 @@
 <div id="left_content">
 <h1>Velg ditt rom</h1>
 	<div id="room_box_container">
-		<div id="subtraction_box" class="room_box"><div class="room_sign"><a href="/room/1">&minus;</a></div></div>
-		<div id="addition_box" class="room_box"><div class="room_sign"><a href="/room/0">+</a></div></div>
-		<div id="division_box" class="room_box"><div class="room_sign"><a href="/room/3">&divide;</a></div></div>
-		<div id="multiplication_box" class="room_box"><div class="room_sign"><a href="/room/2">&times;</a></div></div>
+		<div id="subtraction_box" class="room_box"><div class="room_sign"><a href="/room/2/">&minus;</a></div></div>
+		<div id="addition_box" class="room_box"><div class="room_sign"><a href="/room/1/">+</a></div></div>
+		<div id="division_box" class="room_box"><div class="room_sign"><a href="/room/4/">&divide;</a></div></div>
+		<div id="multiplication_box" class="room_box"><div class="room_sign"><a href="/room/3/">&times;</a></div></div>
 	</div>
 </div>
 
