--- a/main/templates/room.html
+++ b/main/templates/room.html
@@ -1,4 +1,5 @@
 {% extends "outer.html" %}
 {% block content %}
-<h1>Du befinner deg i x-rommet</h1>
+<h1>Du befinner deg i {{ turn.room }}-rommet</h1>
+
 {% endblock %}
