--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -24,7 +24,11 @@
 	<table id="headertable">
 	<tr>
 	<!-- Change the header if user not logged in -->
-	{% if user.username %}<td>{{ user.first_name }} {{ user.last_name }} ({{ user.username }}) - 1D</td>
+	{% if user.username %}<td>{{ user.first_name }} {{ user.last_name }} ({{ user.username }}) 
+	{{ for g in user.profile.groups }}
+	{{ g.name }}
+	{% endfor %}
+	- 1D</td>
 	<!--IF NOT HOME--><td class="align_center">Gullmynter: 34</td><!--ENDIF-->
 	<td class="align_right"><a href="/logout">Avslutt spillet</a></td>
 	{% else %}<td class="align_center">Logg inn for å spille mattespillet.</td>{% endif %}
