--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -10,18 +10,38 @@
 	
 	{% if turn.room.id == 1 %} 
 		background-color: #76ce76;
+		border-bottom: .15em solid #60A860;
 	{% else %} {% if turn.room.id == 2 %}
 		background-color: #dddd51;
+		border-bottom: .15em solid #C2C247;
 	{% else %} {% if turn.room.id == 3 %}
 		background-color: #eca657;
+		border-bottom: .15em solid #C28847;
 	{% else %} {% if turn.room.id == 4 %}
 		background-color: #ec5757;	
+		border-bottom: .15em solid #C94A4A;
 	{% else %}	
-		background-color: #627AAD;			
+		background-color: #627AAD;
+		border-bottom: .15em solid #1D4088;			
 	{% endif %}{% endif %}{% endif %}{% endif %}
-		border-bottom: .15em solid #1D4088;
 		text-shadow: #1D4088 1.5px 1.5px 1.5px;
 	}
+	#page_content {
+	
+	{% if turn.room.id == 1 %} 
+		border: .2em solid #60A860;
+	{% else %} {% if turn.room.id == 2 %}
+		border: .2em solid #C2C247;
+	{% else %} {% if turn.room.id == 3 %}
+		border: .2em solid #C28847;
+	{% else %} {% if turn.room.id == 4 %}
+		border: .2em solid #C94A4A;
+	{% else %}	
+		border: .2em solid #1D4088;			
+	{% endif %}{% endif %}{% endif %}{% endif %}
+	border-top: none;
+	}
+	
 	</style>
 	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<!--[if lte IE 7]><script src="js/IE8.js" type="text/javascript"></script><![endif]-->
