--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -48,6 +48,8 @@
 	<!--[if lt IE 7]><link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
 	<script src="/media/jquery-1.4.2.min.js" type="text/javascript"></script>
 	<script src="/media/main.js" type="text/javascript"></script>
+
+	{% block head %}{% endblock %}
 </head>
 <body>
 
