--- a/main/templates/room.html
+++ b/main/templates/room.html
@@ -1,5 +1,21 @@
 {% extends "outer.html" %}
-{% block content %}
-<h1>Du befinner deg i {{ turn.room }}-rommet</h1>
 
+{% block head %}
+<style type="text/css">
+.back_button {
+	margin-top: 4em;
+}
+.start_button_container {
+	margin: 2em 0;
+}
+</style>
+<script src="/media/question.js" type="text/javascript"></script>
+{% endblock %}
+
+
+{% block content %}
+<h1>Du befinner deg i {{ turn.room }}srommet</h1>
+<p>Dette rommet best&aring;r av 10 oppgaver.</p>
+<p class="start_button_container"><span class="start_button">Start oppgavene!</span></p>
+<p class="back_button"><a href="/">G&aring; tilbake</a></p>
 {% endblock %}
