--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -1,4 +1,12 @@
 {% extends "outer.html" %}
+
+{% block head %}
+<style type="text/css">
+</style>
+<script src="/media/question.js" type="text/javascript"></script>
+{% endblock %}
+
+
 {% block content %}
 <h1>Sp&oslash;rsm&aring;l {{ result.index }} av {{ num_questions }}</h1>
 
@@ -8,4 +16,6 @@
 	<input type="text" name="answer" />
 	<p class="start_button_container"><span class="simple_button">Send svar / neste sp&oslash;rsm&aring;l</span></p></p>
 </form>
+
+<p class="back_button"><a href="/">G&aring; tilbake</a></p>
 {% endblock %}
