Updated Room template and answer method in views

--- a/main/templates/room.html
+++ b/main/templates/room.html
@@ -12,6 +12,6 @@
 {% block content %}
 <h1>Du befinner deg i {{ turn.room }}srommet</h1>
 <p>Dette rommet best&aring;r av {{ turn.result_set.all|length }} oppgaver.</p>
-<p class="start_button_container"><a href="/cur_question/"><span class="simple_button">Start oppgavene!</span></a></p>
+<p class="start_button_container"><a href="/question/"><span class="simple_button">Start oppgavene!</span></a></p>
 <p class="back_button"><a href="/">G&aring; tilbake</a></p>
 {% endblock %}
