--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -17,5 +17,5 @@
 	<p class="start_button_container"><span class="simple_button">Send svar / neste sp&oslash;rsm&aring;l</span></p></p>
 </form>
 
-<p class="back_button"><a href="/">G&aring; tilbake</a></p>
+<p class="back_button"><a href="/room/{{ room_id }}/">G&aring; tilbake til rommet</a></p>
 {% endblock %}
