--- a/main/media/main.css
+++ b/main/media/main.css
@@ -174,18 +174,19 @@ img#treasure_chest {
 }
 .simple_button {
 	cursor: pointer;
-	padding: .7em;
+	padding: .5em;
 	background-color: #627AAD;
 	color: #fff;
 	font-weight: bold;
+	border: .2em solid #325193;
 
 	/*-webkit-box-shadow: 0 0 2em #bbb;
 	-moz-box-shadow: 0 0 2em #bbb;
 	box-shadow: 0 0 2em #bbb;*/
 
-	-moz-border-radius: .7em;
- 	-webkit-border-radius: .7em;
-	border-radius: .7em;
+	-moz-border-radius: .6em;
+ 	-webkit-border-radius: .6em;
+	border-radius: .6em;
 }
 .back_button {
 	margin-top: 4em;
