--- a/main/media/main.css
+++ b/main/media/main.css
@@ -24,6 +24,7 @@ h1 {
 	margin-top: 0;
 	font-size: 150%;
 	font-weight: bold;
+	/*text-shadow: #1D4088 1.5px 1.5px 1.5px;*/
 }
 h1, .chest_header {
 	color: #1D4088;
