--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -5,9 +5,14 @@
 	<title>Mattespill</title>
 	<link rel="stylesheet" href="/media/main.css" type="text/css" />
 
+	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	<!--[if lte IE 7]><script src="js/IE8.js" type="text/javascript"></script><![endif]-->
+	<!--[if lt IE 7]><link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
+	<script src="/media/jquery-1.4.2.min.js" type="text/javascript"></script>
+	<script src="/media/main.js" type="text/javascript"></script>
+
 	<style type="text/css">
 	#header {
-	
 	{% if turn.room.id == 1 %} 
 		background-color: #76ce76;
 		border-bottom: .15em solid #60A860;
@@ -22,32 +27,25 @@
 		border-bottom: .15em solid #C94A4A;
 	{% else %}	
 		background-color: #627AAD;
-		border-bottom: .15em solid #1D4088;			
-	{% endif %}{% endif %}{% endif %}{% endif %}
-		text-shadow: #1D4088 1.5px 1.5px 1.5px;
+		border-bottom: .15em solid #1D4088;
+	{% endif %} {% endif %} {% endif %} {% endif %}
 	}
-	#page_content {
-	
+
+	#page_content {	
 	{% if turn.room.id == 1 %} 
-		border: .2em solid #60A860;
+		border: .5em solid #60A860;
 	{% else %} {% if turn.room.id == 2 %}
-		border: .2em solid #C2C247;
+		border: .5em solid #C2C247;
 	{% else %} {% if turn.room.id == 3 %}
-		border: .2em solid #C28847;
+		border: .5em solid #C28847;
 	{% else %} {% if turn.room.id == 4 %}
-		border: .2em solid #C94A4A;
-	{% else %}	
-		border: .2em solid #1D4088;			
+		border: .5em solid #C94A4A;
+	{% else %}
+		border: .5em solid #1D4088;
 	{% endif %}{% endif %}{% endif %}{% endif %}
-	border-top: none;
+		border-top: none;
 	}
-	
 	</style>
-	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<!--[if lte IE 7]><script src="js/IE8.js" type="text/javascript"></script><![endif]-->
-	<!--[if lt IE 7]><link rel="stylesheet" type="text/css" media="all" href="css/ie6.css"/><![endif]-->
-	<script src="/media/jquery-1.4.2.min.js" type="text/javascript"></script>
-	<script src="/media/main.js" type="text/javascript"></script>
 
 	{% block head %}{% endblock %}
 </head>
@@ -58,15 +56,17 @@
 <div id="header">
 	<table id="headertable">
 	<tr>
-	<!-- Change the header if user not logged in -->
-	{% if user.is_authenticated %}<td>{{ user.first_name }} {{ user.last_name }} ({{ user.username }}) 
+	{% if user.is_authenticated %}
+	<td>{{ user.first_name }} {{ user.last_name }} ({{ user.username }}) 
 	{% for g in user.get_profile.groups %}
 	- {{ g.name }}
 	{% endfor %}
 	</td>
-	<!--IF NOT HOME--><td class="align_center">Gullmynter: {{ user.get_profile.points }}</td><!--ENDIF-->
+	<td class="align_center">Gullmynter: {{ user.get_profile.points }}</td>
 	<td class="align_right"><a href="/logout">Avslutt spillet</a></td>
-	{% else %}<td class="align_center">Logg inn for å spille mattespillet.</td>{% endif %}
+	{% else %}
+	<td class="align_center">Logg inn for å spille mattespillet.</td>
+	{% endif %}
 	</tr>
 	</table>
 </div>
