--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -23,8 +23,8 @@
 {% block content %}
 <h1>Sp&oslash;rsm&aring;l <span id="question_index">{{ result.index }}</span> av {{ num_questions }}</h1>
 
-<p id="correct_answer">Riktig svar p&aring; forrige oppgave</p>
-<p id="wrong_answer">Feil svar p&aring; forrige oppgave</p>
+<p id="correct_answer">Du svarte riktig p&aring; forrige oppgave.</p>
+<p id="wrong_answer">Feil svar p&aring; forrige oppgave.</p>
 
 <p id="question_text">{{ result.question.question}}</p>
 
