--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -62,7 +62,7 @@
 	- {{ g.name }}
 	{% endfor %}
 	</td>
-	<td class="align_center">Gullmynter: {{ user.get_profile.points }}</td>
+	<td class="align_center">Gullmynter: <span id="num_points">{{ user.get_profile.points }}</span></td>
 	<td class="align_right"><a href="/logout">Avslutt spillet</a></td>
 	{% else %}
 	<td class="align_center">Logg inn for å spille mattespillet.</td>
