--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -29,7 +29,7 @@
 <div id="question_wrapper">
 <p id="question_text">{{ result.question.question}}</p>
 
-<form action="question" method="post">
+<form id="answer_form" action="" method="post">
 	<input type="text" name="answer" />
 	<p class="start_button_container"><span class="simple_button">Neste sp&oslash;rsm&aring;l</span></p></p>
 </form>
