--- a/main/templates/room.html
+++ b/main/templates/room.html
@@ -13,7 +13,7 @@
 <h1>Du befinner deg i {{ turn.room }}srommet</h1>
 <p>Dette rommet best&aring;r av {{ turn.result_set.all|length }} oppgaver.</p>
 <p class="start_button_container"><a href="/question/"><span class="simple_button">
-{% if prev_turns|length > 0 %}Start oppgavene!{% else %}Start et nytt fors&oslash;k!{% endif %}{% endif %}
+Start oppgavene!
 </span></a></p>
 <p class="back_button"><a href="/">G&aring; tilbake til hovedsiden</a></p>
 {% endblock %}
