--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% if user.username %}
 <h1>Allerede logget inn</h1>
-<p>Trykk <a href="/">her</a> for å gå til mattespillet.</p>
+<p>Trykk <a href="/">her</a> for Ã¥ gÃ¥ til mattespillet.</p>
 {% else %}
 <h1>Registrer bruker</h1>	
 		<form action="/signup/" method="post">{% csrf_token %}
