--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -34,7 +34,7 @@
 
 <form id="answer_form" action="" method="post">
 	<input type="text" name="answer" />
-	<p class="start_button_container"><span class="simple_button">Svar</span></p></p>
+	<p class="start_button_container"><span class="start_button simple_button">Svar</span></p></p>
 </form>
 
 <p class="back_button"><a href="/room/{{ room_id }}/">G&aring; tilbake til rommet</a></p>
