autofocus på input

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -8,7 +8,7 @@
 <div id="left_content">
 <h1>Velg ditt rom</h1>
 	<div id="room_box_container">
-		<a href="/room/2/"><div id="subtraction_box" class="room_box"><div class="room_sign">&minus;</div></div></a>
+		<a href="/room/2/"><div id="subtraction_box" class="room_box"><div style="position: absolute">Dette rommet krever 500 gullmynter!</div><div class="room_sign">&minus;</div></div></a>
 		<a href="/room/1/"><div id="addition_box" class="room_box"><div class="room_sign">+</div></div></a>
 		<a href="/room/4/"><div id="division_box" class="room_box"><div class="room_sign">&divide;</div></div></a>
 		<a href="/room/3/"><div id="multiplication_box" class="room_box"><div class="room_sign">&times;</div></div></a>
