--- a/main/media/main.css
+++ b/main/media/main.css
@@ -58,7 +58,7 @@ a:hover {
 #header {
 	/*border-bottom: 2px solid #777;*/
 	color: #fff;
-	padding: 1em 1.5em .3em 1em;
+	padding: .8em 1.5em .6em 1em;
 	font-weight: bold;
 }
 #headertable {
@@ -94,69 +94,6 @@ a:hover {
 
 	margin-bottom: 3em;
 }
-#right_content {
-	/*background-color: #eaeaea;
-	border: .3em solid #ddd;*/
-	padding: 1em 2em;
-	text-align: center;
-	float: right;
-}
-#left_content {
-	padding: .5em 0em;
-}
-img#treasure_chest {
-	width: 10em;
-}
-#room_box_container a:hover {
-	text-decoration: none;
-}
-
-#room_box_container {
-	width: 27em;
-	height: 27em;
-}
-#room_box_container p {
-	color: #fff;
-	text-decoration: none;
-}
-#addition_box {
-	background-color: #76ce76;
-	border: .5em solid #60a860;
-}
-#subtraction_box {
-	background-color: #dddd51;
-	border: .5em solid #c2c247;
-	float: right;
-}
-#multiplication_box {
-	margin-top: 1em;
-	background-color: #eca657;
-	border: .5em solid #c28847;
-}
-#division_box {
-	margin-top: 1em;
-	background-color: #ec5757;
-	border: .5em solid #c94a4a;
-	float: right;
-}
-.room_box {
-	-moz-border-radius: 1.5em;
-	-webkit-border-radius: 1.5em;
-	border-radius: 1.5em;
-	width: 12em;
-	height: 12em;
-}
-.room_sign {
-	/*margin-top: -.1em;*/
-	text-align: center;
-	font-weight: bold;
-	font-size: 10em;
-	color: #fff;
-}
-.room_sign a {
-	color: inherit;
-	text-decoration: none;
-}
 .gold_coins {
 	padding-bottom: .4em;
 	padding-left: .5em;
@@ -184,6 +121,7 @@ img#treasure_chest {
 	background-color: #627AAD;
 	color: #fff;
 	font-weight: bold;
+	font-size: 1.3em;
 	border: .2em solid #325193;
 
 	/*-webkit-box-shadow: 0 0 2em #bbb;
