--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,4 +1,95 @@
 {% extends "outer.html" %}
+
+{% block head %}
+<script src="/media/home.js" type="text/javascript"></script>
+<style type="text/css">
+#right_content {
+	/*background-color: #eaeaea;
+	border: .3em solid #ddd;*/
+	padding: 1em 2em;
+	text-align: center;
+	float: right;
+}
+#left_content {
+	padding: .5em 0em;
+}
+img#treasure_chest {
+	width: 10em;
+}
+#room_box_container a:hover {
+	text-decoration: none;
+}
+
+#room_box_container {
+	width: 27em;
+	height: 27em;
+}
+#room_box_container p {
+	color: #fff;
+	text-decoration: none;
+}
+#addition_box {
+	background-color: #76ce76;
+	border: .5em solid #60a860;
+}
+#subtraction_box {
+	background-color: #dddd51;
+	border: .5em solid #c2c247;
+	float: right;
+}
+#multiplication_box {
+	margin-top: 1em;
+	background-color: #eca657;
+	border: .5em solid #c28847;
+}
+#division_box {
+	margin-top: 1em;
+	background-color: #ec5757;
+	border: .5em solid #c94a4a;
+	float: right;
+}
+.room_box {
+	-moz-border-radius: 1.5em;
+	-webkit-border-radius: 1.5em;
+	border-radius: 1.5em;
+	width: 12em;
+	height: 12em;
+	position: relative;
+}
+.restricted_room_msg {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	padding: .4em;
+	color: #fff;
+	-text-shadow: #fff 0 0 1px;
+	background: rgba(0, 0, 0, 0.2);
+	display: none;
+
+	-moz-border-radius: 1em;
+ 	-webkit-border-radius: 1em;
+	border-radius: 1em;
+}
+.restricted_room_msg > div {
+	opacity: 1;
+}
+.room_sign {
+	/*margin-top: -.1em;*/
+	text-align: center;
+	font-weight: bold;
+	font-size: 10em;
+	color: #fff;
+}
+.room_sign a {
+	color: inherit;
+	text-decoration: none;
+}
+/* http://robertnyman.com/2010/01/11/css-background-transparency-without-affecting-child-elements-through-rgba-and-filters/ */
+</style>
+{% endblock %}
+
 {% block content %}
 <div id="right_content">
 	<p class="chest_header">Skattekiste</p>
@@ -8,10 +99,23 @@
 <div id="left_content">
 <h1>Velg ditt rom</h1>
 	<div id="room_box_container">
-		<a href="/room/2/"><div id="subtraction_box" class="room_box"><div style="position: absolute">Dette rommet krever 500 gullmynter!</div><div class="room_sign">&minus;</div></div></a>
-		<a href="/room/1/"><div id="addition_box" class="room_box"><div class="room_sign">+</div></div></a>
-		<a href="/room/4/"><div id="division_box" class="room_box"><div class="room_sign">&divide;</div></div></a>
-		<a href="/room/3/"><div id="multiplication_box" class="room_box"><div class="room_sign">&times;</div></div></a>
+	
+		<a href="/room/2/"><div id="subtraction_box" class="room_box">
+			{% if user.get_profile.points >= rooms.2.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.2.required_points}} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">&minus;</div>
+		</div></a>
+		<a href="/room/1/"><div id="addition_box" class="room_box">
+			{% if user.get_profile.points >= rooms.1.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.1.required_points }} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">+</div>
+		</div></a>
+		<a href="/room/4/"><div id="division_box" class="room_box">
+			{% if user.get_profile.points >= rooms.4.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.4.required_points }} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">&divide;</div>
+		</div></a>
+		<a href="/room/3/"><div id="multiplication_box" class="room_box">
+			{% if user.get_profile.points >= rooms.3.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.3.required_points }} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">&times;</div>
+		</div></a>
 	</div>
 </div>
 
