--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -15,8 +15,28 @@
  	-webkit-border-radius: .3em;
 	border-radius: .3em;
 }
+#question_text {
+	font-size: 1.5em;
+}
 #finished_wrapper {
 	display: none;
+}
+input[name=answer] {
+	font-size: 1.5em;
+	padding: .5em;
+	border: .2em solid #325193;
+	background-color: #f2f2f2;
+	margin: .5em 0;
+
+	-moz-border-radius: .5em;
+	-webkit-border-radius: .5em;
+	border-radius: .5em;
+
+	-text-shadow: #bbb 1px 1px 3px;
+
+	-webkit-box-shadow: 0 0 .7em #bbb;
+	-moz-box-shadow: 0 0 .7em #bbb;
+	box-shadow: 0 0 .7em #bbb;
 }
 </style>
 <script src="/media/question.js" type="text/javascript"></script>
