--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -97,24 +97,24 @@ img#treasure_chest {
 	<p class="gold_coins">Du har <span class="gold_text"> {{ user.get_profile.points }} </span> gullmynter</p>
 </div>
 <div id="left_content">
+
 <h1>Velg ditt rom</h1>
 	<div id="room_box_container">
-	
-		<a href="/room/2/"><div id="subtraction_box" class="room_box">
-			{% if user.get_profile.points >= rooms.2.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.2.required_points}} gullmynter!</b></div></div>{% endif %}
-			<div class="room_sign">&minus;</div>
+		<div id="subtraction_box" class="room_box">
+			{% if user.get_profile.points < rooms.1.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.1.required_points}} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">{% if user.get_profile.points >= rooms.1.required_points %}<a href="/room/2/">{% endif %}&minus;{% if user.get_profile.points >= rooms.1.required_points %}</a>{% endif %}</div>
 		</div></a>
-		<a href="/room/1/"><div id="addition_box" class="room_box">
-			{% if user.get_profile.points >= rooms.1.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.1.required_points }} gullmynter!</b></div></div>{% endif %}
-			<div class="room_sign">+</div>
+		<div id="addition_box" class="room_box">
+			{% if user.get_profile.points < rooms.0.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.0.required_points }} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">{% if user.get_profile.points >= rooms.0.required_points %}<a href="/room/1/">{% endif %}+{% if user.get_profile.points >= rooms.0.required_points %}</a>{% endif %}</div>
 		</div></a>
-		<a href="/room/4/"><div id="division_box" class="room_box">
-			{% if user.get_profile.points >= rooms.4.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.4.required_points }} gullmynter!</b></div></div>{% endif %}
-			<div class="room_sign">&divide;</div>
+		<div id="division_box" class="room_box">
+			{% if user.get_profile.points < rooms.3.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.3.required_points }} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">{% if user.get_profile.points >= rooms.3.required_points %}<a href="/room/4/">{% endif %}&divide;{% if user.get_profile.points >= rooms.3.required_points %}</a>{% endif %}</div>
 		</div></a>
-		<a href="/room/3/"><div id="multiplication_box" class="room_box">
-			{% if user.get_profile.points >= rooms.3.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.3.required_points }} gullmynter!</b></div></div>{% endif %}
-			<div class="room_sign">&times;</div>
+		<div id="multiplication_box" class="room_box">
+			{% if user.get_profile.points < rooms.2.required_points %}<div class="restricted_room_msg"><div><b>Krav:<br />{{ rooms.2.required_points }} gullmynter!</b></div></div>{% endif %}
+			<div class="room_sign">{% if user.get_profile.points >= rooms.2.required_points %}<a href="/room/3/">{% endif %}&times;{% if user.get_profile.points >= rooms.2.required_points %}</a>{% endif %}</div>
 		</div></a>
 	</div>
 </div>
