--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -53,7 +53,7 @@ input[name=answer] {
 <p id="question_text">{{ result.question.question}}</p>
 
 <form id="answer_form" action="" method="post">
-	<input type="text" name="answer" />
+	<input type="text" name="answer" autocomplete="off" />
 	<p class="start_button_container"><span class="start_button simple_button">Svar</span></p></p>
 </form>
 
