Added a basic stats page.

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -94,7 +94,8 @@ img#treasure_chest {
 <div id="right_content">
 	<p class="chest_header">Skattekiste</p>
 	<img id="treasure_chest" src="/media/images/treasurechest.png" alt="skattekiste" />
-	<p class="gold_coins">Du har <span class="gold_text"> {{ user.get_profile.points }} </span> gullmynter</p>
+    <p class="gold_coins">Du har <span class="gold_text"> {{ user.get_profile.points }} </span> gullmynter</p>
+    <p><a href="/stats/">Vis liste over de beste spillerne</a></p>
 </div>
 <div id="left_content">
 
