--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -1,78 +1,13 @@
 {% extends "outer.html" %}
 
 {% block head %}
-<style type="text/css">
-#correct_answer {
-	background-color: #afa;
-}
-#wrong_answer {
-	background-color: #fcc;
-}
-#correct_answer, #wrong_answer {
-	display: none;
-	padding: .3em;
-	-moz-border-radius: .3em;
- 	-webkit-border-radius: .3em;
-	border-radius: .3em;
-}
-#question_text {
-	font-size: 1.5em;
-}
-#finished_wrapper {
-	display: none;
-}
-input[name=answer] {
-	font-size: 1.5em;
-	padding: .5em;
-	border: .2em solid #325193;
-	background-color: #f2f2f2;
-	margin: .5em 0;
-
-	-moz-border-radius: .5em;
-	-webkit-border-radius: .5em;
-	border-radius: .5em;
-
-	-text-shadow: #bbb 1px 1px 3px;
-
-	-webkit-box-shadow: 0 0 .7em #bbb;
-	-moz-box-shadow: 0 0 .7em #bbb;
-	box-shadow: 0 0 .7em #bbb;
-}
-#hintbear {
-	cursor: pointer;
-	float: right;
-	position: relative;
-
-	display: none;
-	opacity: 0;
-	margin-right: -7em;
-}
-#hintbear img {
-	width: 10em;
-}
-#hintbear .dialogbox {
-	display: none;
-	position: absolute;
-	left: -9em;
-	top: 0em;
-
-	padding: .5em;
-	border: .2em solid #000;
-	background-color: #fff;
-	-webkit-box-shadow: 0 0 1em #888;
-	-moz-box-shadow: 0 0 1em #888;
-	box-shadow: 0 0 1em #888;
-	-moz-border-radius: 1em;
-	-webkit-border-radius: 1em;
-	border-radius: 1em;
-}
-</style>
+<link rel="stylesheet" href="/media/question.css" type="text/css" />
 <script src="/media/question.js" type="text/javascript"></script>
 {% endblock %}
 
 
 {% block content %}
-<div id="hintbear"><div class="dialogbox">Har du lyst p&aring; hjelp?<br />Klikk p&aring; meg!</div><img alt="Hintbj&oslash;rnen" src="/media/images/hintbear.png" /></div>
+<div id="hintbear"><div class="dialogbox"></div><img alt="Hintbj&oslash;rnen" src="/media/images/hintbear.png" /></div>
 
 
 <h1>Sp&oslash;rsm&aring;l <span id="question_index">{{ result.index }}</span> av {{ num_questions }}</h1>
@@ -85,7 +20,7 @@ input[name=answer] {
 
 <form id="answer_form" action="" method="post">
 	<input type="text" name="answer" autocomplete="off" />
-	<p class="start_button_container"><span class="start_button simple_button">Svar</span></p></p>
+	<p class="button_container"><span class="start_button simple_button">Svar</span></p></p>
 </form>
 
 <p class="back_button"><a href="/room/{{ room_id }}/">G&aring; tilbake til rommet</a></p>
@@ -93,6 +28,6 @@ input[name=answer] {
 
 <div id="finished_wrapper">
 	<p>Du er ferdig med dette fors&oslash;ket!</p>
-	<p class="start_button_container"><span class="simple_button"><a href="/room/{{ room_id }}/">Tilbake til rommet!</a></span></p>
+	<p class="button_container"><span class="simple_button"><a href="/room/{{ room_id }}/">Tilbake til rommet!</a></span></p>
 </div>
 {% endblock %}
