Added the favicon to outer.html

--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Mattespill</title>
+	<link href="/media/favicon.ico" rel="icon" type="image/x-icon">
 	<link rel="stylesheet" href="/media/main.css" type="text/css" />
 
 	<!-- http://graphicmaniacs.com/note/cross-browser-border-radius-solution-with-example/ -->
