--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -1,4 +1,9 @@
 {% extends "outer.html" %}
+
+{% block head %}
+<script src="/media/peekbear.js" type="text/javascript"></script>
+{% endblock %}
+
 {% block content %}
 {% if user.username %}
 <h1>Allerede logget inn</h1>
