--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -2,6 +2,8 @@
 
 {% block head %}
 <script src="/media/home.js" type="text/javascript"></script>
+<script src="/media/peekbear.js" type="text/javascript"></script>
+
 <style type="text/css">
 #right_content {
 	/*background-color: #eaeaea;
