--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -33,21 +33,25 @@ img#treasure_chest {
 #addition_box {
 	background-color: #76ce76;
 	border: .5em solid #60a860;
+	text-shadow: #60a860 .2em .2em 0;
 }
 #subtraction_box {
 	background-color: #dddd51;
 	border: .5em solid #c2c247;
+	text-shadow: #c2c247 .2em .2em 0;
 	float: right;
 }
 #multiplication_box {
 	margin-top: 1em;
 	background-color: #eca657;
 	border: .5em solid #c28847;
+	text-shadow: #c28847 .2em .2em 0;
 }
 #division_box {
 	margin-top: 1em;
 	background-color: #ec5757;
 	border: .5em solid #c94a4a;
+	text-shadow: #c94a4a .2em .2em 0;
 	float: right;
 }
 .room_box {
