--- a/main/media/main.css
+++ b/main/media/main.css
@@ -127,16 +127,15 @@ a:hover {
 	font-size: 1.3em;
 	border: .2em solid #325193;
 
-	/*-webkit-box-shadow: 0 0 2em #bbb;
-	-moz-box-shadow: 0 0 2em #bbb;
-	box-shadow: 0 0 2em #bbb;*/
-
 	-moz-border-radius: .6em;
  	-webkit-border-radius: .6em;
 	border-radius: .6em;
 }
 .simple_button a {
 	color: inherit;
+}
+.simple_button a:hover {
+	text-decoration: inherit;
 }
 .back_button {
 	margin-top: 4em;
