Fixed the placement of the gold coin for normal users in outer.html

--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -67,7 +67,7 @@
 	</td>
 	<td class="align_center">Gullmynter: <span id="num_points">{{ user.get_profile.points }}</span></td>
 	{% if user.is_staff %}
-	<td class="align_right"><a href="/manage">Administrer</a></td>
+	<td class="align_right"><a href="/manage">Administrer</a> - </td>
 	{% endif %}
 	<td class="align_right"><a href="/logout">Avslutt spillet</a></td>
 	{% else %}
