--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -28,6 +28,6 @@
 
 <div id="finished_wrapper">
 	<p>Du er ferdig med dette fors&oslash;ket!</p>
-	<p class="button_container"><span class="simple_button"><a href="/room/{{ room_id }}/">Tilbake til rommet!</a></span></p>
+	<p class="button_container"><a href="/room/{{ room_id }}/"><span class="simple_button">Tilbake til rommet!</span></a></p>
 </div>
 {% endblock %}
