--- a/main/templates/room.html
+++ b/main/templates/room.html
@@ -15,7 +15,9 @@
 	background-color: #aaffaa;
 }
 </style>
+
 <script src="/media/room.js" type="text/javascript"></script>
+<script src="/media/peekbear.js" type="text/javascript"></script>
 {% endblock %}
 
 
