Change table background to green for user with most points.

--- a/main/templates/stats.html
+++ b/main/templates/stats.html
@@ -3,7 +3,7 @@
 {% block head %}
 <style type="text/css">
 table tr.most_points td {
-	background-color: #aaffaa;
+	background-color: #aaffaa !important;
 }
 </style>
 {% endblock %}
