Added link to groupstats in manage template.

--- a/main/templates/manage.html
+++ b/main/templates/manage.html
@@ -1,4 +1,5 @@
 {% extends "outer.html" %}
 {% block content %}
-<h1>Manage</h1>	
+<h1>Administrasjon</h1>
+<p><a href="/groupstats/">Vis resultater for alle gruppene</a></p>
 {% endblock %}
