Added link to standard django admin.

--- a/main/templates/manage.html
+++ b/main/templates/manage.html
@@ -2,4 +2,5 @@
 {% block content %}
 <h1>Administrasjon</h1>
 <p><a href="/groupstats/">Vis resultater for alle gruppene</a></p>
+<p><a href="/admin/">Gå til administrasjonssiden</a></p>
 {% endblock %}
