Display the amount of points earned or lost for each question.

--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -12,8 +12,8 @@
 
 <h1>Sp&oslash;rsm&aring;l <span id="question_index">{{ result.index }}</span> av {{ num_questions }}</h1>
 
-<p id="correct_answer">Du svarte riktig p&aring; forrige oppgave.</p>
-<p id="wrong_answer">Feil svar p&aring; forrige oppgave.</p>
+<p id="correct_answer">Du svarte riktig p&aring; forrige oppgave. Du tjente <span id="earned_points"></span> gullmynter.</p>
+<p id="wrong_answer">Feil svar p&aring; forrige oppgave. Du tapte <span id="lost_points"></span> gullmynter.</p>
 
 <div id="question_wrapper">
 <p id="question_text">{{ result.question.question}}</p>
