Added link to main page.

--- a/main/templates/manage.html
+++ b/main/templates/manage.html
@@ -2,5 +2,6 @@
 {% block content %}
 <h1>Administrasjon</h1>
 <p><a href="/groupstats/">Vis resultater for alle gruppene</a></p>
-<p><a href="/admin/">Gå til administrasjonssiden</a></p>
+<p><a href="/admin/">G&aring; til administrasjonssiden</a></p>
+<p class="back_button"><a href="/">G&aring; tilbake til hovedsiden</a></p>
 {% endblock %}
