Added link to registration form.

--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -39,8 +39,8 @@
 		<td><input type="password" name="password" /></td>
 	</tr>
 	</table>
-
 	<input type="submit" value="Logg inn" />
 </form>
+<p><a href="/signup/">Klikk her for &aring; registrere en ny bruker</a><p>
 {% endif %}
 {% endblock %}
