Changed button title for top players.

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -105,7 +105,7 @@ img#treasure_chest {
 	<p class="chest_header">Skattekiste</p>
 	<img id="treasure_chest" src="/media/images/treasurechest.png" alt="skattekiste" />
 	<p class="gold_coins">Du har <span class="gold_text"> {{ user.get_profile.points }} </span> gullmynter</p>
-	<p id="top_button" class="button_container"><a title="Vis liste over de beste spillerne" href="/stats/"><span class="simple_button">TOPP-liste</span></a></p>
+	<p id="top_button" class="button_container"><a title="Vis liste over de beste spillerne" href="/stats/"><span class="simple_button">Topp 10</span></a></p>
 </div>
 <div id="left_content">
 
