--- a/main/templates/game_over.html
+++ b/main/templates/game_over.html
@@ -35,6 +35,11 @@
 	margin: 2em;
 }
 </style>
+<script type="text/javascript">
+soundListener.onInit = function() {
+	playSound('sad_trombone.mp3');
+};
+</script>
 {% endblock %}
 
 
