--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -81,6 +81,11 @@
 {% block content %}{% endblock %}
 </div>
 
+<object id="audio_flash" type="application/x-shockwave-flash" data="/media/player_mp3_js.swf" width="0" height="0">
+	<param name="movie" value="/media/player_mp3_js.swf" />
+	<param name="FlashVars" value="listener=soundListener" />
+</object>
+
 </div>
 </body>
 </html>
