--- a/main/templates/question.html
+++ b/main/templates/question.html
@@ -14,7 +14,7 @@
 
 <p id="correct_answer">Du svarte riktig p&aring; forrige oppgave. Du tjente <span id="earned_points"></span> gullmynter.</p>
 <p id="wrong_answer">Feil svar p&aring; forrige oppgave. Du tapte <span id="lost_points"></span> gullmynter.</p>
-<p id="empty_answer">Du må skrive noe i svarfeltet for &aring; g&aring; videre.</p>
+<p id="invalid_answer">Du må skrive et tall i svarfeltet for &aring; g&aring; videre.</p>
 
 <div id="question_wrapper">
 <p id="question_text">{{ result.question.question}}</p>
