Fixed so the whole div is a link, removed some soft tabs and fixed some Norwegian characters.

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -91,6 +91,7 @@ img#treasure_chest {
 .room_sign a {
 	color: inherit;
 	text-decoration: none;
+	display: block;
 }
 #top_button {
 	margin: 2em 0;
