--- a/main/templates/outer.html
+++ b/main/templates/outer.html
@@ -71,7 +71,7 @@
 	{% endif %}
 	<td class="align_right"><a href="/logout">Avslutt spillet</a></td>
 	{% else %}
-	<td class="align_center">Logg inn for å spille mattespillet.</td>
+	<td class="align_center">Logg inn for &aring; spille mattespillet.</td>
 	{% endif %}
 	</tr>
 	</table>
