--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -21,7 +21,7 @@
 {% block content %}
 {% if user.username %}
 <h1>Allerede logget inn</h1>
-<p>Trykk <a href="/">her</a> for å gå til mattespillet.</p>
+<p>Trykk <a href="/">her</a> for &aring; g&aring; til mattespillet.</p>
 {% else %}
 <h1>Logg inn</h1>
 {% if form.errors %}
