--- a/main/templates/manage.html
+++ b/main/templates/manage.html
@@ -1,7 +1,10 @@
 {% extends "outer.html" %}
 {% block content %}
 <h1>Administrasjon</h1>
-<p><a href="/groupstats/">Vis resultater for alle gruppene</a></p>
-<p><a href="/admin/">G&aring; til administrasjonssiden</a></p>
+<ul id="admin_links">
+	<li><a href="/groupstats/">Vis resultater for alle gruppene</a></li>
+	<li><a href="/signup/">Legg til ny bruker</a></li>
+	<li><a href="/admin/">G&aring; til administrasjonssiden</a></li>
+</ul>
 <p class="back_button"><a href="/">G&aring; tilbake til hovedsiden</a></p>
 {% endblock %}
