Fixed title of submit button.

--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -11,7 +11,7 @@
 			<table class="signup">
 			{{ form.as_table }}
 			</table>			
-			<input type="submit" value="Submit" class="button_container"/>
+			<input type="submit" value="Registrer" class="button_container"/>
 			<p class="back_button"><a href="/">Tilbake</a></p>
 		</form>
 
