Updated various admin links.

--- a/main/templates/manage.html
+++ b/main/templates/manage.html
@@ -4,7 +4,7 @@
 <ul id="admin_links">
 	<li><a href="/groupstats/">Vis resultater for alle gruppene</a></li>
 	<li><a href="/signup/">Legg til ny bruker</a></li>
-	<li><a href="/admin/">G&aring; til administrasjonssiden</a></li>
+	<li><a href="/admin/">G&aring; til innholdsadministrasjon</a></li>
 </ul>
 <p class="back_button"><a href="/">G&aring; tilbake til hovedsiden</a></p>
 {% endblock %}
