--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -12,7 +12,7 @@
 			{{ form.as_table }}
 			</table>			
 			<input type="submit" value="Registrer" class="button_container"/>
-			<p class="back_button"><a href="/">Tilbake</a></p>
+			<p class="back_button"><a href="/manage/">G&aring; tilbake til administrasjonssiden</a></p>
 		</form>
 
 {% endblock %}
