--- a/main/templates/stats_grouped.html
+++ b/main/templates/stats_grouped.html
@@ -31,5 +31,5 @@ table tr.most_points td {
 	</table>
 {% endfor %}
 
-<p class="back_button"><a href="/">G&aring; tilbake til hovedsiden</a></p>
+<p class="back_button"><a href="/manage/">G&aring; tilbake til administrasjonssiden</a></p>
 {% endblock %}
